--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+server/models/predictions/
+server/saved_models/
+server/models/saved_lms
+*wikitext-2/
+*predictions/
