--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,50 +1,42 @@
-Package            Version
------------------- ----------
-appdirs            1.4.4
-attrs              19.3.0
-black              19.10b0
-blis               0.4.1
-catalogue          1.0.0
-certifi            2020.4.5.2
-chardet            3.0.4
-click              7.1.2
-cymem              2.0.3
-en-core-web-sm     2.2.5
-Flask              1.1.2
-future             0.18.2
-get                2019.4.13
-idna               2.9
-importlib-metadata 1.6.1
-itsdangerous       1.1.0
-Jinja2             2.11.2
-MarkupSafe         1.1.1
-murmurhash         1.0.2
-numpy              1.18.5
-pathspec           0.8.0
-Pillow             7.1.2
-pip                20.1.1
-plac               1.1.3
-post               2019.4.13
-preshed            3.0.2
-public             2019.4.13
-query-string       2019.4.13
-regex              2020.6.8
-request            2019.4.13
-requests           2.23.0
-sentencepiece      0.1.91
-setuptools         47.1.1
-six                1.15.0
-spacy              2.2.4
-srsly              1.0.2
-thinc              7.4.0
-toml               0.10.1
-torch              1.5.0+cpu
-torchtext          0.6.0
-torchvision        0.6.0+cpu
-tqdm               4.46.1
-typed-ast          1.4.1
-urllib3            1.25.9
-wasabi             0.6.0
-Werkzeug           1.0.1
-wheel              0.34.2
-zipp               3.1.0
+appdirs==1.4.4
+attrs==19.3.0
+black==19.10b0
+blis==0.4.1
+catalogue==1.0.0
+certifi==2020.4.5.2
+chardet==3.0.4
+click==7.1.2
+cymem==2.0.3
+Flask==1.1.2
+future==0.18.2
+get==2019.4.13
+idna==2.9
+importlib-metadata==1.6.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+murmurhash==1.0.2
+numpy==1.18.5
+pathspec==0.8.0
+Pillow==7.1.2
+plac==1.1.3
+post==2019.4.13
+preshed==3.0.2
+public==2019.4.13
+query-string==2019.4.13
+regex==2020.6.8
+request==2019.4.13
+sentencepiece==0.1.91
+six==1.15.0
+srsly==1.0.2
+thinc==7.4.0
+toml==0.10.1
+torch==1.5.0
+torchtext==0.6.0
+torchvision==0.6.0
+tqdm==4.46.1
+typed-ast==1.4.1
+urllib3==1.25.9
+wasabi==0.6.0
+Werkzeug==1.0.1
+zipp==3.1.0
